infra/k8s/expenses-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses
  template:
    metadata:
      labels:
        app: expenses
    spec:
      containers:
        - name: expenses
          image: ffantonelli/expenses
---
apiVersion: v1
kind: Service
metadata:
  name: expenses-srv
spec:
  selector:
    app: expenses
  ports:
    - name: expenses
      protocol: TCP
      port: 3001
      targetPort: 3001
